feat: 优化内容表述和交互体验
- 更新 Hero 部分: 明确 12 年期基金、AI-Native 双币早期投资机构、60+ 被投企业
- 优化关键词高亮: AI 应用、具身智能、算力基础与模型基础
- 完善关于锦秋内容: 添加完整的 4 个 Q&A (身份、合作方式、投资理念、愿景)
- 添加 slogan: 率先抵达未来
- 修复导航栏对齐: logo 左对齐，模式切换按钮右对齐
- 实现内容模糊蒙版: 点击开始/滚动/按 Enter 后才显示清晰内容
- 修复 JSX 标签闭合问题

--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,47 +1,67 @@
 [
   {
     "name": "Soil 种子计划",
+    "nameEn": "Soil Seed Program",
     "summary": "种子阶段 AI 应用专项投资，帮助初创团队快速获得资金与产业支持。",
     "link": "#",
     "brand": {
       "color": "#225BBA",
       "icon": "🌱"
-    }
+    },
+    "status": "活跃",
+    "cases": ["流形空间", "首形科技"],
+    "details": "专注于 Seed 阶段的 AI 应用项目，提供快速决策和早期支持。"
   },
   {
     "name": "Talent-Q",
+    "nameEn": "Talent-Q",
     "summary": "AI 驱动的智能招聘助手，为创业企业优化人才获取流程。",
     "link": "#",
     "brand": {
       "color": "#225BBA",
       "icon": "👥"
-    }
+    },
+    "status": "活跃",
+    "cases": [],
+    "details": "利用 AI 技术帮助被投企业高效匹配优质人才。"
   },
   {
     "name": "锦秋集",
+    "nameEn": "Jinqiu Insights",
     "summary": "来自锦秋的 AI Insider，定期分享行业研究与投资洞察。",
     "link": "#",
     "brand": {
       "color": "#225BBA",
       "icon": "📰"
-    }
+    },
+    "status": "活跃",
+    "cases": [],
+    "details": "定期发布 AI 行业深度研究报告和投资分析。"
   },
   {
     "name": "锦秋会",
+    "nameEn": "Jinqiu Summit",
     "summary": "一年一度的锦秋 CEO 大会，汇聚投资人、创业者与行业专家。",
     "link": "#",
     "brand": {
       "color": "#225BBA",
       "icon": "🎤"
-    }
+    },
+    "status": "年度活动",
+    "cases": [],
+    "details": "每年举办的 CEO 峰会，促进生态内的深度交流。"
   },
   {
     "name": "锦秋小饭桌",
+    "nameEn": "Jinqiu Dinner",
     "summary": "创业者常态化闭门社交，促进被投企业间的交流与协作。",
     "link": "#",
     "brand": {
       "color": "#225BBA",
       "icon": "🍽️"
-    }
+    },
+    "status": "活跃",
+    "cases": [],
+    "details": "定期组织的闭门交流活动，增进创业者间的联系。"
   }
 ]
