--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.6",
     "zod": "3.25.76"
   },
   "devDependencies": {
