--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.86.0",
     "@swc/helpers": "^0.5.15",
+    "@types/pg": "^8.16.0",
     "@vercel/analytics": "1.3.1",
     "@vercel/edge-config": "^1.4.3",
     "autoprefixer": "^10.4.20",
@@ -55,6 +56,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "pg": "^8.17.1",
     "react": "19.2.0",
     "react-confetti": "^6.4.0",
     "react-day-picker": "9.8.0",
