--- a/package.json
+++ b/package.json
@@ -42,6 +42,15 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.86.0",
     "@swc/helpers": "^0.5.15",
+    "@tiptap/extension-color": "^3.15.3",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
+    "@tiptap/extension-placeholder": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/extension-text-style": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "@types/pg": "^8.16.0",
     "@vercel/analytics": "1.3.1",
     "@vercel/edge-config": "^1.4.3",
