--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.86.0",
     "@swc/helpers": "^0.5.15",
     "@tiptap/extension-color": "^3.15.3",
+    "@tiptap/extension-highlight": "^3.15.3",
     "@tiptap/extension-image": "^3.15.3",
     "@tiptap/extension-link": "^3.15.3",
     "@tiptap/extension-placeholder": "^3.15.3",
